--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil Pribadi Saya</title>
-    <link rel="stylesheet" href="/profil/stayle.css">
+    <link rel="stylesheet" href="/profil.id/stayle.css">
 </head>
 <body>
     <div class="kepala">
@@ -79,7 +79,7 @@
              <input type="submit" value="kirim"> 
         </div>
         <div class="gambar">
-        <img src="/profil/IMG-20250416-WA0151.jpg" alt="Foto Profil Zikri" width="200" height="200">
+        <img src="/profil.id/profil.jpg" alt="Foto Profil Zikri" width="200" height="200">
         </div>
     </div>
 </body>
